--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,12 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -19,20 +14,26 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 1rem;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.log-container{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.position-fixed{
+  top: 5px;
+  right: 5px;
+}
+.main-container{
+  min-height: 100vh;
+}
+.text-div{
+  white-space: pre-line;
+  white-space: pre-wrap;
+}
+textarea{
+  white-space: pre-line;
+  white-space: pre-wrap;
 }
